--- a/src/sx/ip/resources/fxml/FXMLLandingPage.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLandingPage.fxml
@@ -17,32 +17,41 @@ limitations under the License.
 <?import com.jfoenix.controls.JFXButton?>
 <?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="450.0" prefWidth="375.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLLandingPageController">
+<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="475.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLLandingPageController">
     <children>
-      <ImageView fitHeight="450.0" fitWidth="375.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../imgs/bg-375x450.jpg" />
-         </image>
-      </ImageView>
-      <Label layoutX="149.0" layoutY="139.0" text="Welcome to" />
-      <ImageView fitHeight="45.0" fitWidth="230.0" layoutX="73.0" layoutY="170.0" pickOnBounds="true" preserveRatio="true">
+      <Label layoutX="199.0" layoutY="83.0" text="Welcome to" />
+      <BorderPane prefHeight="560.0" prefWidth="485.0">
+         <center>
+            <ImageView fitHeight="562.0" fitWidth="487.0" pickOnBounds="true" BorderPane.alignment="CENTER">
+               <image>
+                  <Image url="@../imgs/bg-375x450.jpg" />
+               </image>
+               <viewport>
+                  <Rectangle2D />
+               </viewport>
+            </ImageView>
+         </center>
+      </BorderPane>
+      <ImageView fitHeight="45.0" fitWidth="230.0" layoutX="123.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imgs/ipsx-logo-230x45.png" />
          </image>
       </ImageView>
-      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="343.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4">
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="440.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4">
          <graphic>
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXButton fx:id="btnRegister" accessibleText="https://demo.ip.sx/register" defaultButton="true" layoutX="120.0" layoutY="331.0" onAction="#openBrowser" prefHeight="36.0" prefWidth="140.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0; -fx-background-radius: 4px;" text="Register" textAlignment="CENTER" textFill="WHITE">
+      <JFXButton fx:id="btnRegister" accessibleText="https://demo.ip.sx/register" defaultButton="true" layoutX="127.0" layoutY="375.0" onAction="#openBrowser" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0; -fx-background-radius: 4px;" text="Register" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="16.0" />
          </font>
@@ -50,7 +59,7 @@ limitations under the License.
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnLogin" defaultButton="true" layoutX="118.0" layoutY="381.0" onAction="#handleLoginAction" prefHeight="36.0" prefWidth="140.0" ripplerFill="WHITE" style="-fx-border-color: #2aace0; -fx-border-width: 1px; -fx-border-radius: 4px; -fx-background-color: white;" text="Login" textAlignment="CENTER" textFill="#2aace0">
+      <JFXButton fx:id="btnLogin" defaultButton="true" layoutX="125.0" layoutY="425.0" onAction="#handleLoginAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-border-color: #2aace0; -fx-border-width: 1px; -fx-border-radius: 4px; -fx-background-color: white;" text="Login" textAlignment="CENTER" textFill="#2aace0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="16.0" />
          </font>
