--- a/src/sx/ip/resources/fxml/FXMLLandingPage.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLandingPage.fxml
@@ -26,12 +26,11 @@ limitations under the License.
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="550.0" prefWidth="475.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLLandingPageController">
+<AnchorPane id="AnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLLandingPageController">
     <children>
-      <Label layoutX="199.0" layoutY="83.0" text="Welcome to" />
-      <BorderPane prefHeight="560.0" prefWidth="485.0">
+      <BorderPane layoutX="1.0" layoutY="1.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="475.0">
          <center>
-            <ImageView fitHeight="562.0" fitWidth="487.0" pickOnBounds="true" BorderPane.alignment="CENTER">
+            <ImageView blendMode="DARKEN" fitHeight="549.0" fitWidth="475.0" pickOnBounds="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../imgs/bg-375x450.jpg" />
                </image>
@@ -41,6 +40,7 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
+      <Label layoutX="199.0" layoutY="83.0" text="Welcome to" />
       <ImageView fitHeight="45.0" fitWidth="230.0" layoutX="123.0" layoutY="114.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imgs/ipsx-logo-230x45.png" />
