--- a/src/sx/ip/resources/fxml/FXMLManualProxy.fxml
+++ b/src/sx/ip/resources/fxml/FXMLManualProxy.fxml
@@ -32,11 +32,11 @@ limitations under the License.
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLManualProxyController">
+<AnchorPane id="AnchorPane" fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLManualProxyController">
     <children>
-      <BorderPane layoutX="-4.0" layoutY="-6.0" prefHeight="560.0" prefWidth="485.0">
+      <BorderPane layoutX="3.0" prefHeight="550.0" prefWidth="472.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="1.0">
          <center>
-            <ImageView fitHeight="562.0" fitWidth="487.0" pickOnBounds="true" BorderPane.alignment="CENTER">
+            <ImageView blendMode="DARKEN" fitHeight="549.0" fitWidth="475.0" pickOnBounds="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../imgs/bg-375x450.jpg" />
                </image>
@@ -46,17 +46,21 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
-      <ImageView fitHeight="45.0" fitWidth="230.0" layoutX="123.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="123.0" AnchorPane.rightAnchor="122.0">
-         <image>
-            <Image url="@../imgs/ipsx-logo-230x45.png" />
-         </image>
-      </ImageView>
+      <BorderPane layoutX="50.0" prefHeight="75.0" prefWidth="375.0">
+         <center>
+            <ImageView fitHeight="45.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+               <image>
+                  <Image url="@../imgs/ipsx-logo-230x45.png" />
+               </image>
+            </ImageView>
+         </center>
+      </BorderPane>
       <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="438.0" layoutY="5.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4">
          <graphic>
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <AnchorPane fx:id="pacPane" layoutX="13.0" layoutY="182.0" prefHeight="124.0" prefWidth="375.0">
+      <AnchorPane fx:id="pacPane" layoutX="13.0" layoutY="182.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="124.0" prefWidth="375.0" AnchorPane.leftAnchor="18.0" AnchorPane.rightAnchor="61.0">
          <children>
             <Label layoutX="74.0" layoutY="40.0" text="PAC URL" textFill="#707070" AnchorPane.leftAnchor="74.0" AnchorPane.rightAnchor="258.0">
                <font>
@@ -66,7 +70,7 @@ limitations under the License.
             <JFXTextField fx:id="proxyUrl" focusColor="#80bdff" labelFloat="true" layoutX="74.0" layoutY="55.0" prefHeight="26.0" prefWidth="300.0" style="-fx-background-color: rgba(255,255,255,0.8);" unFocusColor="#ced4da" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="advancedPane" layoutX="15.0" layoutY="162.0" minHeight="-Infinity" prefHeight="162.0" prefWidth="375.0" visible="false">
+      <AnchorPane fx:id="advancedPane" layoutX="15.0" layoutY="162.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="162.0" prefWidth="375.0" visible="false" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="84.0">
          <children>
             <Label layoutX="74.0" text="PROTOCOL" textFill="#707070">
                <font>
@@ -105,7 +109,7 @@ limitations under the License.
             <JFXPasswordField fx:id="proxyPass" focusColor="#80bdff" layoutX="199.0" layoutY="128.0" prefHeight="26.0" prefWidth="105.0" unFocusColor="#ced4da" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="agreePane" layoutX="17.0" layoutY="280.0" prefHeight="59.0" prefWidth="375.0">
+      <AnchorPane fx:id="agreePane" layoutX="17.0" layoutY="325.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="59.0" prefWidth="375.0" AnchorPane.bottomAnchor="165.0" AnchorPane.leftAnchor="17.0" AnchorPane.rightAnchor="60.0" AnchorPane.topAnchor="325.0">
          <children>
             <JFXCheckBox fx:id="bypassCB" checkedColor="#2aace0" disable="true" layoutX="64.0" layoutY="30.0" text="Bypass proxy server for local addresses" textFill="#707070" unCheckedColor="#ced4da" visible="false">
                <cursor>
@@ -147,7 +151,7 @@ limitations under the License.
             <Font size="11.0" />
          </font>
       </Label>
-      <Label layoutX="39.0" layoutY="128.0" prefHeight="25.0" prefWidth="173.0" text="New Proxy">
+      <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="New Proxy">
          <font>
             <Font size="20.0" />
          </font>
