--- a/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
+++ b/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
@@ -28,7 +28,7 @@ limitations under the License.
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLResetPasswordController">
+<AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLResetPasswordController">
     <children>
       <BorderPane prefHeight="450.0" prefWidth="374.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0">
          <center>
@@ -42,20 +42,6 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
-      <BorderPane prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0">
-         <center>
-            <ImageView fitHeight="45.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
-               <image>
-                  <Image url="@../imgs/ipsx-logo-230x45.png" />
-               </image>
-            </ImageView>
-         </center>
-      </BorderPane>
-      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <graphic>
-            <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
-         </graphic>
-      </JFXButton>
       <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="Reset Password" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="172.0">
          <font>
             <Font size="20.0" />
@@ -70,9 +56,37 @@ limitations under the License.
             </Label>
             <JFXTextField fx:id="userEmail" focusColor="#80bdff" layoutX="64.0" layoutY="35.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="59.0" />
             <MaterialIconView fill="#707070" glyphName="MAIL_OUTLINE" layoutX="28.0" layoutY="60.0" size="24.0" />
-            <Hyperlink fx:id="btnBackToLogin" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="135.0" layoutY="77.0" onAction="#backToLoginAction" prefHeight="24.0" prefWidth="228.0" text="Already have an account? Login" textFill="#2aace0" textOverrun="CLIP" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="8.0" />
+            <Hyperlink fx:id="btnBack" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="135.0" layoutY="77.0" onAction="#onBackAction" prefHeight="24.0" prefWidth="228.0" text="Already have an account? Login" textFill="#2aace0" textOverrun="CLIP" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="8.0" />
          </children>
       </AnchorPane>
+      <BorderPane prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0">
+         <center>
+            <ImageView fitHeight="45.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+               <image>
+                  <Image url="@../imgs/ipsx-logo-230x45.png" />
+               </image>
+               <BorderPane.margin>
+                  <Insets left="-20.0" />
+               </BorderPane.margin>
+            </ImageView>
+         </center>
+         <left>
+            <Hyperlink fx:id="btnBack" onAction="#onBackAction" BorderPane.alignment="CENTER">
+               <graphic>
+                  <MaterialIconView glyphName="ARROW_BACK" size="25">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </MaterialIconView>
+               </graphic>
+            </Hyperlink>
+         </left>
+      </BorderPane>
+      <JFXButton fx:id="btnClose" contentDisplay="CENTER" focusTraversable="false" layoutX="353.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onAction="#handleCloseAction" prefHeight="32.0" prefWidth="32.0" text=" " textAlignment="CENTER" textFill="#a4a4a4" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <graphic>
+            <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
+         </graphic>
+      </JFXButton>
       <JFXButton fx:id="btnSendLink" defaultButton="true" layoutX="123.0" layoutY="376.0" onAction="#sendLinkAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Send Password Reset Link" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="123.0" AnchorPane.rightAnchor="121.0">
          <font>
             <Font size="12.0" />
