--- a/src/sx/ip/resources/fxml/FXMLLogin.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLogin.fxml
@@ -99,12 +99,12 @@ limitations under the License.
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <AnchorPane layoutX="113.0" layoutY="423.0" prefHeight="75.0" prefWidth="253.0" AnchorPane.leftAnchor="113.0" AnchorPane.rightAnchor="108.0">
+      <AnchorPane layoutX="67.0" layoutY="423.0" prefHeight="75.0" prefWidth="342.0" AnchorPane.leftAnchor="67.0" AnchorPane.rightAnchor="65.0">
          <children>
-            <Label fx:id="loginErrorLabel" alignment="CENTER" layoutX="1.0" layoutY="2.0" prefHeight="75.0" prefWidth="253.0" text="Error" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="2.0" />
+            <Label fx:id="loginErrorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="2.0" prefHeight="75.0" prefWidth="253.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="2.0" />
          </children>
       </AnchorPane>
-      <WebView fx:id="webviewFacebook" layoutX="2.0" prefHeight="550.0" prefWidth="474.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0" />
+      <WebView fx:id="webviewFacebook" layoutX="3.0" layoutY="68.0" prefHeight="482.0" prefWidth="472.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="1.0" />
     </children>
    <opaqueInsets>
       <Insets />
