--- a/src/sx/ip/resources/fxml/FXMLLandingPage.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLandingPage.fxml
@@ -51,7 +51,7 @@ limitations under the License.
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXButton fx:id="btnRegister" accessibleText="https://demo.ip.sx/register" defaultButton="true" layoutX="127.0" layoutY="375.0" onAction="#openBrowser" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0; -fx-background-radius: 4px;" text="Register" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
+      <JFXButton fx:id="btnRegister" accessibleText="https://demo.ip.sx/register" defaultButton="true" layoutX="127.0" layoutY="375.0" onAction="#openBrowser" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0; -fx-background-radius: 4px;" text="Register" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="16.0" />
          </font>
@@ -59,7 +59,7 @@ limitations under the License.
             <Cursor fx:constant="HAND" />
          </cursor>
       </JFXButton>
-      <JFXButton fx:id="btnLogin" defaultButton="true" layoutX="125.0" layoutY="425.0" onAction="#handleLoginAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-border-color: #2aace0; -fx-border-width: 1px; -fx-border-radius: 4px; -fx-background-color: white;" text="Login" textAlignment="CENTER" textFill="#2aace0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
+      <JFXButton fx:id="btnLogin" defaultButton="true" layoutX="125.0" layoutY="425.0" onAction="#handleLoginAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-border-color: #2aace0; -fx-border-width: 1px; -fx-border-radius: 4px; -fx-background-color: white;" text="Login" textAlignment="CENTER" textFill="#2aace0" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="127.0" AnchorPane.rightAnchor="130.0">
          <font>
             <Font size="16.0" />
          </font>
