--- a/src/sx/ip/resources/fxml/FXMLLogin.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLogin.fxml
@@ -30,6 +30,12 @@ limitations under the License.
 
 <AnchorPane id="AnchorPane" fx:id="mainAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="475.0" style="-fx-background-color: rgba(255,255,255,0); -fx-border-color: #ced4da; -fx-border-width: 1px; -fx-border-insets: 0px; -fx-border-radius: 0px;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sx.ip.controllers.FXMLLoginController">
     <children>
+      <Label prefHeight="64.0" prefWidth="253.0" text="Please Login to continue" textAlignment="JUSTIFY" textFill="#707070" textOverrun="CLIP" wrapText="true" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="120.0" />
+      <Label text="Login" textFill="#707070" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="58.0" AnchorPane.topAnchor="120.0">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Label>
       <BorderPane prefHeight="450.0" prefWidth="374.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="0.0">
          <center>
             <ImageView blendMode="DARKEN" fitHeight="549.0" fitWidth="475.0" pickOnBounds="true" BorderPane.alignment="CENTER">
@@ -42,33 +48,7 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
-      <AnchorPane fx:id="loginInfoPane" layoutX="20.0" layoutY="205.0" prefHeight="124.0" prefWidth="441.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="13.0">
-         <children>
-            <Label layoutX="38.0" layoutY="11.0" text="Login" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="58.0">
-               <font>
-                  <Font size="26.0" />
-               </font>
-            </Label>
-            <Label layoutX="40.0" layoutY="43.0" prefHeight="64.0" prefWidth="253.0" text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore." textOverrun="CLIP" wrapText="true" AnchorPane.leftAnchor="40.0" AnchorPane.rightAnchor="58.0" />
-         </children>
-      </AnchorPane>
-      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="123.0" layoutY="373.0" onAction="#loginWithFacebookAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="122.0" AnchorPane.rightAnchor="122.0">
-         <font>
-            <Font size="12.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </JFXButton>
-      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="122.0" layoutY="329.0" onAction="#loginWithEmailAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="122.0" AnchorPane.rightAnchor="122.0">
-         <font>
-            <Font size="12.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </JFXButton>
-      <BorderPane layoutX="10.0" layoutY="10.0" prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane layoutX="2.0" layoutY="10.0" prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="2.0" AnchorPane.topAnchor="10.0">
          <center>
             <ImageView fitHeight="45.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
@@ -91,6 +71,9 @@ limitations under the License.
                <cursor>
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
             </Hyperlink>
          </left>
       </BorderPane>
@@ -104,7 +87,23 @@ limitations under the License.
             <Label fx:id="loginErrorLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="1.0" layoutY="2.0" prefHeight="75.0" prefWidth="253.0" textAlignment="CENTER" textFill="RED" visible="false" wrapText="true" AnchorPane.bottomAnchor="-2.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="2.0" />
          </children>
       </AnchorPane>
-      <WebView fx:id="webviewFacebook" layoutX="3.0" layoutY="68.0" prefHeight="482.0" prefWidth="472.0" AnchorPane.leftAnchor="2.0" AnchorPane.rightAnchor="1.0" />
+      <JFXButton fx:id="btnLoginFacebook" defaultButton="true" layoutX="123.0" layoutY="373.0" onAction="#loginWithFacebookAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Facebook" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="122.0" AnchorPane.rightAnchor="122.0">
+         <font>
+            <Font size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="122.0" layoutY="329.0" onAction="#loginWithEmailAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login with Email" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="80.0" AnchorPane.leftAnchor="122.0" AnchorPane.rightAnchor="122.0">
+         <font>
+            <Font size="12.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </JFXButton>
+      <WebView fx:id="webviewFacebook" layoutX="4.0" layoutY="89.0" prefHeight="461.0" prefWidth="470.0" AnchorPane.leftAnchor="3.0" AnchorPane.rightAnchor="2.0" />
     </children>
    <opaqueInsets>
       <Insets />
