--- a/src/sx/ip/resources/fxml/FXMLLoginEmail.fxml
+++ b/src/sx/ip/resources/fxml/FXMLLoginEmail.fxml
@@ -43,38 +43,38 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
-      <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="Login with Email" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="172.0">
+      <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="Login with Email" textFill="#707070" AnchorPane.leftAnchor="28.0" AnchorPane.rightAnchor="172.0" AnchorPane.topAnchor="120.0">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <AnchorPane fx:id="loginInfoPane" layoutY="152.0" prefHeight="202.0" prefWidth="372.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+      <AnchorPane fx:id="loginInfoPane" layoutY="152.0" prefHeight="202.0" prefWidth="372.0" AnchorPane.bottomAnchor="109.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="182.0">
          <children>
             <Label layoutX="5.0" layoutY="20.0" prefHeight="14.0" prefWidth="90.0" text="Email Address" textFill="#707070" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="218.0">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="userEmail" focusColor="#80bdff" layoutX="65.0" layoutY="35.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="58.0" />
-            <MaterialIconView fill="#707070" glyphName="MAIL_OUTLINE" layoutX="29.0" layoutY="60.0" size="24.0" />
+            <JFXTextField fx:id="userEmail" focusColor="#80bdff" layoutX="65.0" layoutY="35.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="28.0" />
+            <MaterialIconView fill="#707070" glyphName="MAIL_OUTLINE" layoutX="29.0" layoutY="60.0" size="24.0" AnchorPane.leftAnchor="28.0" />
             <Label layoutX="65.0" layoutY="100.0" prefHeight="14.0" prefWidth="90.0" text="Password" textFill="#707070" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="217.0">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <JFXPasswordField fx:id="userPass" focusColor="#80bdff" layoutX="65.0" layoutY="114.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="58.0" />
-            <Hyperlink fx:id="btnReset" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="198.0" layoutY="162.0" onAction="#resetPassword" prefHeight="24.0" prefWidth="160.0" text="Forgot Your Password?" textFill="#2aace0" textOverrun="CLIP" AnchorPane.leftAnchor="198.0" AnchorPane.rightAnchor="5.0" />
-            <MaterialIconView fill="#707070" glyphName="LOCK_OUTLINE" layoutX="30.0" layoutY="139.0" size="24.0" />
+            <JFXPasswordField fx:id="userPass" focusColor="#80bdff" layoutX="65.0" layoutY="114.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="65.0" AnchorPane.rightAnchor="28.0" />
+            <Hyperlink fx:id="btnReset" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="198.0" layoutY="162.0" onAction="#resetPassword" prefHeight="24.0" prefWidth="160.0" text="Forgot Your Password?" textFill="#2aace0" textOverrun="CLIP" AnchorPane.leftAnchor="198.0" AnchorPane.rightAnchor="28.0" />
+            <MaterialIconView fill="#707070" glyphName="LOCK_OUTLINE" layoutX="30.0" layoutY="139.0" size="24.0" AnchorPane.leftAnchor="28.0" />
          </children>
       </AnchorPane>
-      <BorderPane layoutX="20.0" layoutY="20.0" prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane layoutX="20.0" layoutY="20.0" prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="10.0">
          <center>
             <ImageView fitHeight="45.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../imgs/ipsx-logo-230x45.png" />
                </image>
                <BorderPane.margin>
-                  <Insets left="-20.0" />
+                  <Insets left="-30.0" />
                </BorderPane.margin>
             </ImageView>
          </center>
@@ -90,6 +90,9 @@ limitations under the License.
                <cursor>
                   <Cursor fx:constant="OPEN_HAND" />
                </cursor>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
             </Hyperlink>
          </left>
       </BorderPane>
@@ -98,7 +101,7 @@ limitations under the License.
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="124.0" layoutY="376.0" onAction="#loginAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="124.0" AnchorPane.rightAnchor="120.0">
+      <JFXButton fx:id="btnLoginEmail" defaultButton="true" layoutX="124.0" layoutY="376.0" onAction="#loginAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Login" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="124.0" AnchorPane.rightAnchor="120.0">
          <font>
             <Font size="12.0" />
          </font>
