--- a/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
+++ b/src/sx/ip/resources/fxml/FXMLResetPassword.fxml
@@ -42,36 +42,36 @@ limitations under the License.
             </ImageView>
          </center>
       </BorderPane>
-      <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="Reset Password" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="172.0">
+      <Label layoutX="29.0" layoutY="100.0" prefHeight="25.0" prefWidth="173.0" text="Reset Password" textFill="#707070" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="172.0" AnchorPane.topAnchor="120.0">
          <font>
             <Font size="20.0" />
          </font>
       </Label>
-      <AnchorPane fx:id="loginInfoPane" layoutX="2.0" layoutY="152.0" prefHeight="112.0" prefWidth="373.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0">
+      <AnchorPane fx:id="loginInfoPane" layoutX="7.0" layoutY="182.0" prefHeight="258.0" prefWidth="463.0" AnchorPane.bottomAnchor="109.0" AnchorPane.leftAnchor="1.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="182.0">
          <children>
-            <Label layoutX="63.0" layoutY="20.0" prefHeight="14.0" prefWidth="90.0" text="Email Address" textFill="#707070" AnchorPane.leftAnchor="63.0" AnchorPane.rightAnchor="219.0">
+            <Label layoutX="63.0" layoutY="20.0" prefHeight="14.0" prefWidth="90.0" text="Email Address" textFill="#707070" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="219.0">
                <font>
                   <Font size="11.0" />
                </font>
             </Label>
-            <JFXTextField fx:id="userEmail" focusColor="#80bdff" layoutX="64.0" layoutY="35.0" prefHeight="26.0" prefWidth="249.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="59.0" />
-            <MaterialIconView fill="#707070" glyphName="MAIL_OUTLINE" layoutX="28.0" layoutY="60.0" size="24.0" />
-            <Hyperlink fx:id="btnBack" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="135.0" layoutY="77.0" onAction="#onBackAction" prefHeight="24.0" prefWidth="228.0" text="Already have an account? Login" textFill="#2aace0" textOverrun="CLIP" AnchorPane.leftAnchor="135.0" AnchorPane.rightAnchor="8.0" />
+            <JFXTextField fx:id="userEmail" focusColor="#80bdff" layoutX="64.0" layoutY="35.0" prefHeight="26.0" prefWidth="377.0" unFocusColor="#ced4da" AnchorPane.leftAnchor="64.0" AnchorPane.rightAnchor="28.0" AnchorPane.topAnchor="35.0" />
+            <MaterialIconView fill="#707070" glyphName="MAIL_OUTLINE" layoutX="28.0" layoutY="60.0" size="24.0" AnchorPane.leftAnchor="28.0" />
+            <Hyperlink fx:id="btnBack" accessibleText="https://ip.sx/dist/IPSX-Terms-of-Service.pdf" alignment="CENTER" contentDisplay="TOP" layoutX="100.0" layoutY="77.0" onAction="#onBackAction" prefHeight="24.0" prefWidth="272.0" text="Already have an account? Login" textFill="#2aace0" textOverrun="CLIP" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" />
          </children>
       </AnchorPane>
-      <BorderPane prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0">
+      <BorderPane prefHeight="75.0" prefWidth="375.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="10.0">
          <center>
             <ImageView fitHeight="45.0" fitWidth="250.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
                <image>
                   <Image url="@../imgs/ipsx-logo-230x45.png" />
                </image>
                <BorderPane.margin>
-                  <Insets left="-20.0" />
+                  <Insets left="-40.0" />
                </BorderPane.margin>
             </ImageView>
          </center>
          <left>
-            <Hyperlink fx:id="btnBack" onAction="#onBackAction" BorderPane.alignment="CENTER">
+            <Hyperlink fx:id="btnBack" alignment="CENTER" onAction="#onBackAction" BorderPane.alignment="CENTER">
                <graphic>
                   <MaterialIconView glyphName="ARROW_BACK" size="25">
                      <cursor>
@@ -79,6 +79,12 @@ limitations under the License.
                      </cursor>
                   </MaterialIconView>
                </graphic>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
+               <padding>
+                  <Insets left="10.0" />
+               </padding>
             </Hyperlink>
          </left>
       </BorderPane>
@@ -87,7 +93,7 @@ limitations under the License.
             <MaterialIconView fill="#707070" glyphName="CLOSE" size="16.0" textAlignment="CENTER" />
          </graphic>
       </JFXButton>
-      <JFXButton fx:id="btnSendLink" defaultButton="true" layoutX="123.0" layoutY="376.0" onAction="#sendLinkAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Send Password Reset Link" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="123.0" AnchorPane.rightAnchor="121.0">
+      <JFXButton fx:id="btnSendLink" defaultButton="true" layoutX="123.0" layoutY="376.0" onAction="#sendLinkAction" prefHeight="40.0" prefWidth="230.0" ripplerFill="WHITE" style="-fx-background-color: #2aace0;" text="Send Password Reset Link" textAlignment="CENTER" textFill="WHITE" AnchorPane.bottomAnchor="30.0" AnchorPane.leftAnchor="121.0" AnchorPane.rightAnchor="121.0">
          <font>
             <Font size="12.0" />
          </font>
